--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -7,6 +7,7 @@ const { date, href, title, description, last } = Astro.props;
   class="py-4 px-2 hover:bg-accent-blue/20 group"
   style="text-decoration: none"
   href={`/posts/${href}`}
+  transition:name={`${href}-container`}
 >
   <div class="flex items-baseline justify-between">
     <div>
