--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@ import "../styles/global.css";
 import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
 import { ColorMode } from "astro-color-mode";
+import { ViewTransitions } from "astro:transitions";
 
 const { pageTitle } = Astro.props;
 ---
@@ -22,8 +23,9 @@ const { pageTitle } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta property="og:image" content="/og.jpg" />
-    <meta name="view-transition" content="same-origin" />
+    <!-- <meta name="view-transition" content="same-origin" /> -->
     <ColorMode />
+    <ViewTransitions />
     <meta
       name="description"
       content="Trevor Lee | Software Developer and Designer from Vancouver, Canada | TypeScript, React, Next.js, Node.js"
@@ -38,11 +40,39 @@ const { pageTitle } = Astro.props;
     <div class="mx-auto z-10">
       <Navigation />
       <hr class="hr-bg border-none h-0.5" />
-      <main class="px-2" style="view-transition-name: foo">
+      <!-- <main class="px-2" style="view-transition-name: foo"> -->
+      <main class="px-2">
         <slot />
       </main>
       <hr class="hr-bg border-none h-0.5" />
       <Footer />
     </div>
+    <script is:inline>
+      function setTheme() {
+        const darkIcon = document.querySelector(".dark");
+        const lightIcon = document.querySelector(".light");
+        const themeToggle = document.querySelector("#themeToggle");
+        darkIcon?.classList.remove("animate");
+        darkIcon?.classList.add("animate");
+        lightIcon?.classList.remove("animate");
+        lightIcon?.classList.add("animate");
+        console.log("setTheme ran");
+
+        const currentUrl = window.location.href;
+        console.log(currentUrl);
+
+        // Check if the current URL matches the pattern for /posts/*
+        if (
+          currentUrl.match(/\/posts\//) &&
+          currentUrl !== "http://localhost:1999/posts/"
+        ) {
+          location.reload();
+          console.log("reloaded");
+        }
+      }
+
+      themeToggle?.addEventListener("click", setTheme);
+      window.addEventListener("astro:beforeload", setTheme);
+    </script>
   </body>
 </html>
