--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,19 +1,39 @@
 ---
 import { ViewTransitions } from "astro:transitions";
+import { Breadcrumbs } from "astro-breadcrumbs";
 ---
 
-<nav
-  class="flex items-center justify-between py-4 px-2 align-middle max-w-screen-md mx-auto"
->
-  <a
-    id="logo"
-    class="px-2 py-2.5 text-content hover:bg-accent-blue/20 hover:text-content font-sans"
-    href="/"
-    aria-label="Go to homepage"
-    title="Go to homepage"
-  >
-    trevortylerlee.com
-  </a>
+<nav class="flex justify-between items-center p-2">
+  <div class="px-4 py-4 font-sans">
+    <Breadcrumbs>
+      <svg
+        slot="index"
+        width="24"
+        height="24"
+        viewBox="0 0 28 28"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <g clip-path="url(#clip0_2124_49968)">
+          <path
+            d="M17.0039 23.7256H10.957V15.9795C10.957 15.4404 11.3203 15.0889 11.8594 15.0889H16.1133C16.6523 15.0889 17.0039 15.4404 17.0039 15.9795V23.7256ZM3.65625 23.0225C3.65625 24.6514 4.64062 25.6123 6.29297 25.6123H21.7031C23.3555 25.6123 24.3281 24.6514 24.3281 23.0225V13.7412L14.6953 5.66699C14.25 5.29199 13.7227 5.30371 13.2891 5.66699L3.65625 13.7412V23.0225ZM0 12.5693C0 13.0498 0.375 13.5068 1.00781 13.5068C1.33594 13.5068 1.60547 13.3311 1.85156 13.1318L13.582 3.28809C13.8398 3.05371 14.1562 3.05371 14.4141 3.28809L26.1445 13.1318C26.3789 13.3311 26.6484 13.5068 26.9766 13.5068C27.5273 13.5068 27.9727 13.167 27.9727 12.6045C27.9727 12.2529 27.8555 12.0186 27.6094 11.8076L15.4102 1.55371C14.543 0.81543 13.4648 0.81543 12.5859 1.55371L0.375 11.8076C0.117188 12.0186 0 12.2998 0 12.5693ZM21.3867 7.28418L24.3281 9.76855V4.35449C24.3281 3.83887 24 3.51074 23.4844 3.51074H22.2305C21.7266 3.51074 21.3867 3.83887 21.3867 4.35449V7.28418Z"
+            fill="currentColor"></path>
+        </g>
+      </svg>
+      <svg
+        slot="separator"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"><path d="m9 18 6-6-6-6"></path></svg
+      >
+    </Breadcrumbs>
+  </div>
   <button
     data-color-mode-switch
     class="themeToggle px-2 py-2 rounded-full hover:bg-content/20"
@@ -49,53 +69,53 @@ import { ViewTransitions } from "astro:transitions";
       </svg>
     </span>
   </button>
+
+  <style>
+    .dark,
+    .light {
+      pointer-events: none;
+    }
+
+    .dark.animate {
+      animation: themeToggleBackwards 200ms ease-out forwards;
+      transition: 0.15s ease-in;
+    }
+
+    .light.animate {
+      animation: themeToggleForwards 200ms ease-out forwards;
+      transition: 0.15s ease-in;
+    }
+
+    @keyframes themeToggleForwards {
+      0% {
+        transform: rotate(-60deg);
+        scale: 1;
+      }
+
+      50% {
+        scale: 1.2;
+      }
+
+      100% {
+        transform: rotate(0deg);
+        scale: 1;
+      }
+    }
+
+    @keyframes themeToggleBackwards {
+      0% {
+        transform: rotate(60deg);
+        scale: 1;
+      }
+
+      50% {
+        scale: 1.2;
+      }
+
+      100% {
+        transform: rotate(0deg);
+        scale: 1;
+      }
+    }
+  </style>
 </nav>
-
-<style>
-  .dark,
-  .light {
-    pointer-events: none;
-  }
-
-  .dark.animate {
-    animation: themeToggleBackwards 200ms ease-out forwards;
-    transition: 0.15s ease-in;
-  }
-
-  .light.animate {
-    animation: themeToggleForwards 200ms ease-out forwards;
-    transition: 0.15s ease-in;
-  }
-
-  @keyframes themeToggleForwards {
-    0% {
-      transform: rotate(-60deg);
-      scale: 1;
-    }
-
-    50% {
-      scale: 1.2;
-    }
-
-    100% {
-      transform: rotate(0deg);
-      scale: 1;
-    }
-  }
-
-  @keyframes themeToggleBackwards {
-    0% {
-      transform: rotate(60deg);
-      scale: 1;
-    }
-
-    50% {
-      scale: 1.2;
-    }
-
-    100% {
-      transform: rotate(0deg);
-      scale: 1;
-    }
-  }
-</style>
