add aria-label to home link

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -8,6 +8,7 @@ import { Breadcrumbs } from "astro-breadcrumbs";
     <Breadcrumbs>
       <svg
         slot="index"
+        aria-label="Go to homepage"
         width="24"
         height="24"
         viewBox="0 0 28 28"
