--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -4,14 +4,16 @@ const { date, href, title, description, last } = Astro.props;
 ---
 
 <a
-  class="py-4 px-2 hover:bg-accent-blue/20 group"
+  class="py-4 px-2 group"
   style="text-decoration: none"
   href={`/posts/${href}`}
   transition:name={`${href}-container`}
 >
   <div class="flex items-baseline justify-between">
     <div>
-      <h2 class="line-clamp-1 text-lg font-bold text-left hover:underline">
+      <h2
+        class="line-clamp-1 text-lg font-bold text-left hover:underline group-hover:underline"
+      >
         {title}
       </h2>
     </div>
