--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -16,18 +16,17 @@ const { prevUrl, nextUrl } = Astro.props;
           aria-label="Newer Posts"
         >
           <svg
-            width="14"
-            height="14"
-            viewBox="0 0 22 18"
             xmlns="http://www.w3.org/2000/svg"
-            class="mr-2"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            class="w-5 h-5 mr-1"
           >
             <path
-              d="M0 8.88281C0 9.17578 0.128906 9.44531 0.363281 9.66797L8.14453 17.4375C8.37891 17.6602 8.625 17.7656 8.90625 17.7656C9.48047 17.7656 9.9375 17.3438 9.9375 16.7578C9.9375 16.4766 9.83203 16.1953 9.64453 16.0195L7.01953 13.3477L2.37891 9.11719L2.13281 9.69141L5.90625 9.92578H20.7305C21.3398 9.92578 21.7617 9.49219 21.7617 8.88281C21.7617 8.27344 21.3398 7.83984 20.7305 7.83984H5.90625L2.13281 8.07422L2.37891 8.66016L7.01953 4.41797L9.64453 1.74609C9.83203 1.55859 9.9375 1.28906 9.9375 1.00781C9.9375 0.421875 9.48047 0 8.90625 0C8.625 0 8.37891 0.09375 8.12109 0.351562L0.363281 8.09766C0.128906 8.32031 0 8.58984 0 8.88281Z"
-              class="fill-current "
+              fill-rule="evenodd"
+              d="M17 10a.75.75 0 01-.75.75H5.612l4.158 3.96a.75.75 0 11-1.04 1.08l-5.5-5.25a.75.75 0 010-1.08l5.5-5.25a.75.75 0 111.04 1.08L5.612 9.25H16.25A.75.75 0 0117 10z"
+              clip-rule="evenodd"
             />
           </svg>
-
           <span>Newer Posts</span>
         </a>
       </span>
@@ -43,16 +42,15 @@ const { prevUrl, nextUrl } = Astro.props;
         >
           Older Posts
           <svg
-            width="14"
-            height="14"
-            viewBox="0 0 22 18"
-            fill="none"
             xmlns="http://www.w3.org/2000/svg"
-            class="ml-2"
+            viewBox="0 0 20 20"
+            fill="currentColor"
+            class="w-5 h-5 ml-1"
           >
             <path
-              d="M21.7617 8.88281C21.7617 8.58984 21.6445 8.32031 21.4102 8.09766L13.6406 0.351562C13.3828 0.09375 13.1367 0 12.8555 0C12.2812 0 11.8359 0.421875 11.8359 1.00781C11.8359 1.28906 11.9297 1.55859 12.1172 1.74609L14.7422 4.41797L19.3945 8.66016L19.6289 8.07422L15.8555 7.83984H1.03125C0.421875 7.83984 0 8.27344 0 8.88281C0 9.49219 0.421875 9.92578 1.03125 9.92578H15.8555L19.6289 9.69141L19.3945 9.11719L14.7422 13.3477L12.1172 16.0195C11.9297 16.1953 11.8359 16.4766 11.8359 16.7578C11.8359 17.3438 12.2812 17.7656 12.8555 17.7656C13.1367 17.7656 13.3828 17.6602 13.6172 17.4375L21.4102 9.66797C21.6445 9.44531 21.7617 9.17578 21.7617 8.88281Z"
-              class="fill-current"
+              fill-rule="evenodd"
+              d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z"
+              clip-rule="evenodd"
             />
           </svg>
         </a>
