--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -1,46 +1,79 @@
 ---
 import { getCollection } from "astro:content";
+import { Breadcrumbs } from "astro-breadcrumbs";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import Comments from "@components/Comments";
 import { Image } from "astro:assets";
-import styles from '../../styles/CodeBlock.module.css'
-import { formatDate } from "../../lib/utils"
+import styles from "../../styles/CodeBlock.module.css";
+import { formatDate } from "../../lib/utils";
 
 export async function getStaticPaths() {
-  const allPosts = await getCollection("posts")
+  const allPosts = await getCollection("posts");
 
   return allPosts.map((post) => ({
     params: { slug: post.slug },
     props: {
       post,
-    }
-  }))
+    },
+  }));
 }
 
 const { post } = Astro.props;
-const { Content } = await post.render()
+const { Content } = await post.render();
 ---
 
 <BaseLayout style={styles} pageTitle={post.data.title}>
+  <!-- <div class="max-w-screen-md mx-auto py-4">
+    <Breadcrumbs ariaLabel="a structured list of pages" indexText="index">
+      <svg
+        slot="separator"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 20 20"
+        fill="currentColor"
+        class="w-5 h-5 flex self-center"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z"
+          clip-rule="evenodd"></path>
+      </svg>
+    </Breadcrumbs>
+  </div> -->
   <div class="max-w-screen-md mx-auto px-2">
-    {post.data.imageSrc ?
-      <Image
-        src={post.data.imageSrc}
-        alt={post.data.imageAlt}
-        quality={"low"}
-        class="mt-6"
-      /> : <></>
+    {
+      post.data.imageSrc ? (
+        <Image
+          src={post.data.imageSrc}
+          alt={post.data.imageAlt}
+          quality={"low"}
+          class="mt-6"
+        />
+      ) : null
     }
     <div transition:name={`${post.slug}-container`}>
-    <h1 class='text-3xl sm:text-5xl text-center font-bold mt-6' id="postTitle">{post.data.title}</h1>
-      {post.data.date && <p class="mb-8 text-center sm:text-lg sm:mt-2 mt-1">Posted {formatDate(post.data.date, "long")}</p>}
-      <hr class="mb-8 hr-bg border-none h-0.5"/>
+      <h1
+        class="text-3xl sm:text-5xl text-center font-bold mt-6"
+        id="postTitle"
+      >
+        {post.data.title}
+      </h1>
+      {
+        post.data.date && (
+          <p class="mb-8 text-center sm:text-lg sm:mt-2 mt-1">
+            Posted {formatDate(post.data.date, "long")}
+          </p>
+        )
+      }
+      <hr class="mb-8 hr-bg border-none h-0.5" />
     </div>
-    <div id="content" class="prose mx-auto max-w-none mb-12 prose-strong:text-inherit">
+    <div
+      id="content"
+      class="prose mx-auto max-w-none mb-12 prose-strong:text-inherit"
+    >
       <Content />
     </div>
     <div class="pb-4">
-      <Comments client:idle/>
+      <Comments client:idle />
     </div>
   </div>
 </BaseLayout>
