--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,16 +2,12 @@
 import CopyButton from "../components/CopyButton";
 ---
 
-<footer
-  class="py-8 max-w-screen-md mx-auto flex justify-between font-sans px-2"
->
-  <div class="flex gap-4 self-center max-[420px]:flex-col max-[420px]:gap-2">
-    <a href="https://github.com/trevortylerlee" class="">Github</a>
-    <a href="https://www.linkedin.com/in/trevortylerlee/" class="">LinkedIn</a>
-    <CopyButton
-      client:load
-      copyText="trevortylerlee@gmail.com"
-      label="trevortylerlee@gmail.com"
-    />
-  </div>
+<footer class="py-8 px-1 flex gap-4 font-sans max-w-screen-md mx-auto">
+  <a href="https://github.com/trevortylerlee" class="">Github</a>
+  <a href="https://www.linkedin.com/in/trevortylerlee/" class="">LinkedIn</a>
+  <CopyButton
+    client:load
+    copyText="trevortylerlee@gmail.com"
+    label="trevortylerlee@gmail.com"
+  />
 </footer>
