--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,13 +2,10 @@
 import CopyButton from "../components/CopyButton";
 ---
 
-<footer class="py-8 px-1 flex gap-4 font-sans max-w-screen-md mx-auto">
+<footer
+  class="py-8 px-2 flex flex-col sm:flex-row gap-1 sm:gap-4 font-sans max-w-screen-md mx-auto"
+>
   <a href="https://github.com/trevortylerlee" class="">Github</a>
   <a href="https://www.linkedin.com/in/trevortylerlee/" class="">LinkedIn</a>
   <span aria-label="email address">trevortylerlee@gmail.com</span>
-  <!-- <CopyButton
-    client:load
-    copyText="trevortylerlee@gmail.com"
-    label="trevortylerlee@gmail.com"
-  /> -->
 </footer>
