use fontsource for atkinson, style changes on pagination links, update README

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import CopyButton from "../components/CopyButton";
 ---
 
 <footer
-  class="py-8 px-2 flex flex-col sm:flex-row gap-1 sm:gap-4 font-sans max-w-screen-md mx-auto"
+  class="mx-auto flex max-w-screen-md flex-col gap-2 px-2 py-8 font-sans sm:flex-row sm:gap-4"
 >
   <a href="https://github.com/trevortylerlee" class="">Github</a>
   <a href="https://www.linkedin.com/in/trevortylerlee/" class="">LinkedIn</a>
