--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -4,30 +4,18 @@ const { prevUrl, nextUrl } = Astro.props;
 
 <nav
   aria-label="Posts Navigation"
-  class="max-w-screen-md mx-auto"
+  class="mx-auto max-w-screen-md"
   id="pagination"
 >
   {
     prevUrl && (
       <span class="flex">
         <a
-          class="group mb-8 mt-8 flex items-center p-2 !no-underline hover:bg-accent-blue/20"
+          class="group mb-8 mt-8 flex items-center rounded-sm border border-[#767676] bg-[#EFEFEF] px-[6px] py-[1px] font-sans text-sm !text-black !no-underline hover:bg-[#e1e1e1] active:bg-[#d9d9d9]"
           href={prevUrl}
-          aria-label="Newer Posts"
+          aria-label="Previous posts"
         >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            class="w-5 h-5 mr-1"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M17 10a.75.75 0 01-.75.75H5.612l4.158 3.96a.75.75 0 11-1.04 1.08l-5.5-5.25a.75.75 0 010-1.08l5.5-5.25a.75.75 0 111.04 1.08L5.612 9.25H16.25A.75.75 0 0117 10z"
-              clip-rule="evenodd"
-            />
-          </svg>
-          <span>Newer Posts</span>
+          Previous
         </a>
       </span>
     )
@@ -36,23 +24,11 @@ const { prevUrl, nextUrl } = Astro.props;
     nextUrl && (
       <span class="flex justify-end">
         <a
-          class="mb-8 mt-8 items-center flex p-2 !no-underline hover:bg-accent-blue/20"
+          class="group mb-8 mt-8 flex items-center rounded-sm border border-[#767676] bg-[#EFEFEF] px-[6px] py-[1px] font-sans text-sm !text-black !no-underline hover:bg-[#e1e1e1] active:bg-[#d9d9d9]"
           href={nextUrl}
-          aria-label="Older Posts"
+          aria-label="Next posts"
         >
-          Older Posts
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            class="w-5 h-5 ml-1"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z"
-              clip-rule="evenodd"
-            />
-          </svg>
+          Next
         </a>
       </span>
     )
