--- a/src/pages/posts/[...page].astro
+++ b/src/pages/posts/[...page].astro
@@ -12,7 +12,7 @@ export async function getStaticPaths({ paginate }) {
   const formattedPosts = formatBlogPost(allPosts);
 
   return paginate(formattedPosts, {
-    pageSize: 5,
+    pageSize: 4,
   });
 }
 
@@ -22,7 +22,7 @@ const { page } = Astro.props;
 ---
 
 <BaseLayout pageTitle={pageTitle} category="posts">
-  <div class="py-8 grid max-w-screen-md mx-auto">
+  <div class="mx-auto grid max-w-screen-md py-8">
     {
       page.data.map((post) => (
         <MorePost
