--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,26 +21,27 @@ const pageTitle = "Trevor Lee | Homepage";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <div class="grid mx-auto max-w-screen-md pb-16">
-    <div class="py-16 text-center flex flex-col">
-      <a href="/about" class="max-w-[128px] mx-auto rounded-full">
+  <div class="mx-auto grid max-w-screen-md pb-16">
+    <div class="flex flex-col py-16 text-center">
+      <a href="/about" class="mx-auto max-w-[128px] rounded-full">
         <Image
           src={profilePicture}
           format="avif"
           quality={"med"}
           alt="A picture of young me with my dog Roxy."
-          class="rounded-full mx-auto hover:scale-105 cursor-help transition-transform duration-200 ease-in-out"
+          class="mx-auto cursor-help rounded-full transition-transform duration-200 ease-in-out hover:scale-105"
           transition:name="profilePicture"
+          loading={"eager"}
         />
       </a>
-      <h1 class="text-4xl mt-4 font-bold leading-normal" transition:name="name">
+      <h1 class="mt-4 text-4xl font-bold leading-normal" transition:name="name">
         Trevor Lee
       </h1>
       <p class="text-xl" transition:name="bio">
         I'm a web developer based in Vancouver.
       </p>
     </div>
-    <h2 class="text-xl opacity-70 font-sans">Projects</h2>
+    <h2 class="font-sans text-xl opacity-70">Projects</h2>
     <Projects
       description="Send, monitor, and track phishing emails"
       href="https://phished.up.railway.app/"
@@ -59,7 +60,7 @@ const pageTitle = "Trevor Lee | Homepage";
       image={redLogo}
       title="swiftie.red"
     />
-    <h2 class="text-xl opacity-70 mt-12 font-sans">Posts</h2>
+    <h2 class="mt-12 font-sans text-xl opacity-70">Posts</h2>
     {
       formattedPosts.map((post) => (
         <MorePost
